# cloppy

./: .gitattributes  .gitignore  Cargo.toml  build.rs  cloppy.exe.manifest  todo.txt
src/: change_journal.rs  context_stash.rs  dispatcher.rs  errors.rs  file_listing.rs  logger.rs  main.rs  main1.rs  parse_mft.rs  plugin.rs  plugin_handler.rs  user_settings.rs
src/actions/: exit_app.rs  focus_on_input_field.rs  minimize_to_tray.rs  mod.rs  new_input_query.rs  new_plugin_state.rs  new_settings.rs  restore_columns_position.rs  restore_windows_position.rs  save_columns_position.rs  save_windows_position.rs  shortcuts.rs  show_files_window.rs
src/file_listing/: file_entity.rs  file_type_icon.rs  files.rs  mod.rs  state.rs  storage.rs
src/file_listing/list/: icon.rs  item.rs  mod.rs  paint.rs
src/file_listing/ntfs/: mod.rs
src/file_listing/ntfs/change_journal/: mod.rs  usn_journal.rs  usn_record.rs
src/gui/: accel_table.rs  context_stash.rs  default_font.rs  event.rs  image_list.rs  input_field.rs  layout_manager.rs  list_header.rs  list_view.rs  mod.rs  msg.rs  paint.rs  shortcuts.rs  state_update.rs  status_bar.rs  tray_icon.rs  utils.rs  wnd.rs  wnd_class.rs  wnd_proc.rs
src/ntfs/: attributes.rs  change_journal.rs  data.rs  file_entry.rs  file_record.rs  filename.rs  mft_parser.rs  mft_reader.rs  mod.rs  nom_parser.rs  parse_operation.rs  standard.rs  volume_data.rs
src/ntfs/attributes/: data.rs  filename.rs  mod.rs  standard.rs
src/ntfs/change_journal/: mod.rs  usn_journal.rs  usn_record.rs
src/ntfs/windows_api/: api_calls.rs  mod.rs  structs.rs
src/resources/: constants.rs  mod.rs  resources.rc
src/settings/: definitions.rs  mod.rs
src/sql/: arena.rs  mod.rs
src/windows/: mod.rs  string.rs  utils.rs
src/windows/async_io/: async_consumer.rs  async_producer.rs  async_reader.rs  buffer_pool.rs  iocp.rs  mod.rs
